@@ -1,11 +1,13 @@
 package ru.mrchebik.language;
 
+import ru.mrchebik.autocomplete.analyser.AutocompleteAnalyser;
 import ru.mrchebik.binaries.BinariesWrapper;
 import ru.mrchebik.command.CommandWrapper;
 import ru.mrchebik.highlight.caret.CaretHighlightFactory;
 import ru.mrchebik.highlight.pair.PairSymbols;
 import ru.mrchebik.highlight.pair.PairSymbolsType;
 import ru.mrchebik.highlight.syntax.SyntaxWrapper;
+import ru.mrchebik.language.java.autocomplete.analyser.JavaAutocompleteAnalyser;
 import ru.mrchebik.language.java.binaries.JavaBinaries;
 import ru.mrchebik.language.java.command.JavaCommand;
 import ru.mrchebik.language.java.highlight.caret.JavaCaretHighlight;
@@ -24,6 +26,7 @@ public class Language {
     public static CommandWrapper command;
     public static BinariesWrapper binaries;
     public static CaretHighlightFactory caretHighlight;
+    public static AutocompleteAnalyser autocompleteAnalyser;
 
     public static void init() {
         var languageCode = PropertyCollector.language;
@@ -40,6 +43,8 @@ public class Language {
             command = new JavaCommand();
             binaries = new JavaBinaries();
             caretHighlight = new JavaCaretHighlight();
+
+            autocompleteAnalyser = new JavaAutocompleteAnalyser();
         }
     }
 
