@@ -1,0 +1,4 @@
+package ru.mrchebik.language.java.autocomplete;
+
+public class JavaAutocomplete {
+}
