@@ -1,11 +1,0 @@
-package ru.mrchebik.model;
-
-public class CustomInteger {
-    public int a;
-
-    public int setAndGet(int a) {
-        this.a = a;
-
-        return a;
-    }
-}
